--- a/index.html
+++ b/index.html
@@ -25,6 +25,35 @@ class: center, middle, inverse, title-slide
 
 
 
+# ¿Qué haremos hoy?
+
+- Repaso del segundo taller 
+&lt;br&gt;&lt;br&gt;
+--
+
+- Encadenar funciones: operador %&gt;%
+&lt;br&gt;&lt;br&gt;
+--
+
+- Crear una variable a partir de ciertas condiciones: case_when()
+&lt;br&gt;&lt;br&gt;
+--
+
+- Recodificar y renombrar variables
+&lt;br&gt;&lt;br&gt;
+--
+
+- Exportar objetos a archivos Rdata. Importar archivos Rdata.
+&lt;br&gt;&lt;br&gt;
+--
+
+- Unir dos data frame 
+&lt;br&gt;&lt;br&gt;
+--
+
+- Buenas prácticas a la hora de escribir código
+
+---
 class: inverse, center, middle
 # %&gt;%
 
